2013-03-24, kantag v1.0.0
  * Initial release.

2013-03-25, kantag v1.0.1
  * Change shebangs to '/usr/bin/env python' since cygwin does not have a python2
    symlink.
  * Remove module imports from __init__.py so that tools showkan can work without
    python-musicbrainz2.

<tbd>, kantag v1.0.2
  * Fix detection of various artist releases.
  * Add support for acoustid_id, Writer, musicbrainz_trackid, 
    musicbrainz_releasegroupid, and musicbrainz_discid tags.
  * Change shebangs back to '/usr/bin/env python2' for systems (e.g., funtoo)
    that default to python3.
  * initkan: Output OriginalDate at track level if it cannot be rolled to disc or
    release level (e.g., a re-release that has multiple albums on a single disc).
  * initkan: Fix output of OriginalDate if there is no Date at the same level.
  * initkan: Fix double output of Date tag with multi-disc releases.
  * When reading non-MP3 files, map Remixer to Arranger.  This was already
    happening for MP3s, as well as for remixer relationships pulled from the
    MusicBrainz web service.
  * Add ISRC to recognized tags; unsupported by initkan.
  * Add support to ID3 TDOR frame.