@@ -33,18 +33,18 @@ from kantag._version import __version__
 
 # Lists of initkan supported tags.
 _release_tags = frozenset([
-	u'Album', u'AlbumArtist', u'AlbumArtistSort', u'Arranger', u'ArrangerSort', u'Artist', 
-	u'ArtistSort', u'ASIN', u'Barcode', u'CatalogNumber', u'Comment', u'Composer', 
-	u'ComposerSort',  u'Conductor', u'ConductorSort', u'Date', u'Genre', u'LabelId', 
+	u'Album', u'AlbumArtist', u'AlbumArtistSort', u'AlbumArtists', u'AlbumArtistsSort', u'Arranger',
+	u'ArrangerSort', u'Artist', u'ArtistSort', u'ASIN', u'Barcode', u'CatalogNumber', u'Comment',
+	u'Composer', u'ComposerSort',  u'Conductor', u'ConductorSort', u'Date', u'Genre', u'LabelId', 
 	u'Lyricist', u'LyricistSort', u'OriginalDate', u'Part', u'Performer', u'PerformerSort',
-	u'Title', u'Version', u'Writer', u'WriterSort',
+	u'Title', u'Version', u'Writer', u'Work', u'WriterSort',
 	])
 _disc_tags = frozenset([
-	u'AlbumArtist', u'AlbumArtistSort', u'Arranger', u'ArrangerSort', u'Artist', u'ArtistSort',
-	u'Comment', u'Composer', u'ComposerSort', u'Conductor', u'ConductorSort', u'CoverNumber',
-	u'Date', u'DiscNumber', u'DiscSubtitle', u'Genre', u'Lyricist', u'LyricistSort',
-	u'OriginalDate', u'Part', u'Performer', u'PerformerSort', u'Title', u'Version', u'Work',
-	u'Writer', u'WriterSort'
+	u'AlbumArtist', u'AlbumArtistSort', u'AlbumArtists', 'AlbumArtistsSort', u'Arranger',
+	u'ArrangerSort', u'Artist', u'ArtistSort', u'Comment', u'Composer', u'ComposerSort',
+	u'Conductor', u'ConductorSort', u'CoverNumber', u'Date', u'DiscNumber', u'DiscSubtitle',
+	u'Genre', u'Lyricist', u'LyricistSort', u'OriginalDate', u'Part', u'Performer',
+	u'PerformerSort', u'Title', u'Version', u'Work', u'Writer', u'WriterSort'
 	])
 _track_tags = frozenset([
 	u'Arranger', u'ArrangerSort', u'Artist', u'ArtistSort', u'Comment', u'Composer',
@@ -54,8 +54,8 @@ _track_tags = frozenset([
 	])
 _musicbrainz_tags = [
 	u'musicbrainz_albumid', u'musicbrainz_albumartistid', u'musicbrainz_artistid',
-	u'musicbrainz_discid', u'musicbrainz_releasegroupid', u'musicbrainz_trackid',
-	u'musicbrainz_workid'
+	u'musicbrainz_discid', u'musicbrainz_releasegroupid', u'musicbrainz_releasetrackid',
+	u'musicbrainz_trackid', u'musicbrainz_workid'
 	]
 _replaygain_tags = [
 	u'replaygain_album_peak', u'replaygain_album_gain', u'replaygain_track_peak', 
@@ -243,7 +243,7 @@ def add_unsupported(builder, entity, parent=None):
 	
 	found = False
 	for key in entity.tags.iterkeys():
-		if not key in l and key not in _musicbrainz_tags and key not in _replaygain_tags:
+		if key not in l and key not in _musicbrainz_tags and key not in _replaygain_tags:
 			if not found:
 				builder.add_blank()
 				builder.add_comment('Miscellaneous')
@@ -302,6 +302,21 @@ def add_structured(builder, rel, args):
 	elif rel.is_various:
 		# In this case, get_tags should have added albumartist/sort if missing.
 		pass
+		
+	# Always want a multi-value album artist output, so prefer any proper AlbumArtists multi-value,
+	# but fall back on what we using for AlbumArtist.
+	if 'AlbumArtists' in rel.tags:
+		builder.add_values(rel, 'AlbumArtists')
+		builder.add_values(rel, 'AlbumArtistsSort')
+	elif 'AlbumArtist' in rel.tags:
+		builder.add_values_as(rel, 'AlbumArtist', 'AlbumArtists')
+		builder.add_values_as(rel, 'AlbumArtistSort', 'AlbumArtistsSort')
+	elif rel.is_single_artist:
+		builder.add_values_as(rel, 'Artist', 'AlbumArtists')
+		builder.add_values_as(rel, 'ArtistSort', 'AlbumArtistsSort')
+	elif rel.is_various:
+		# In this case, get_tags should have added albumartist/sort if missing.
+		pass
 	
 	add_artists(builder, rel)
 	if 'Performer' in rel.tags:
@@ -311,10 +326,14 @@ def add_structured(builder, rel, args):
 		builder.add_values_as(rel, 'Artist', 'Performer')
 		builder.add_values_as(rel, 'ArtistSort', 'PerformerSort')
 	elif not rel.is_various:
-		# Assume this is a mixed release with no performer credits, where albumartist is the primary
-		# performer.
-		builder.add_values_as(rel, 'AlbumArtist', 'Performer')
-		builder.add_values_as(rel, 'AlbumArtistSort', 'PerformerSort')
+		# Assume this is a mixed release with no performer credits, where album artists are the
+		# primary performers; prefer multi-value, if available.
+		if 'AlbumArtists' in rel.tags:
+			builder.add_values_as(rel, 'AlbumArtists', 'Performer')
+			builder.add_values_as(rel, 'AlbumArtistsSort', 'PerformerSort')
+		else:
+			builder.add_values_as(rel, 'AlbumArtist', 'Performer')
+			builder.add_values_as(rel, 'AlbumArtistSort', 'PerformerSort')
 	if args.classical and not args.artist_block and rel.is_single_artist \
 		and 'Composer' not in rel.tags:
 		# Assume the artist is the composer, though it could be the primary performer.
@@ -410,6 +429,8 @@ def add_structured(builder, rel, args):
 			builder.add_values(disc, 'DiscSubtitle')
 			builder.add_values(disc, 'AlbumArtist')
 			builder.add_values(disc, 'AlbumArtistSort')
+			builder.add_values(disc, 'AlbumArtists')
+			builder.add_values(disc, 'AlbumArtistsSort')
 			add_dates(builder, disc, False)
 			builder.add_values(disc, 'Genre')
 			builder.add_values(disc, 'Version')
