@@ -41,11 +41,15 @@ cannonical_tags = frozenset([
 	u'AlbumArtist',
 	u'AlbumArtistNonSort',
 	u'AlbumArtistSort',
+	u'AlbumArtists',
+	u'AlbumArtistsSort',
 	u'Arranger',
 	u'ArrangerSort',
 	u'Artist',
 	u'ArtistNonSort',
 	u'ArtistSort',
+	u'Artists',
+	u'ArtistsSort',
 	u'ASIN',
 	u'Barcode',
 	u'CatalogNumber',
@@ -71,6 +75,7 @@ cannonical_tags = frozenset([
 	u'Media',
 	u'Mixer',
 	u'OriginalDate',
+	u'OriginalYear',
 	u'Part',
 	u'Performer',
 	u'PerformerSort',
@@ -92,6 +97,7 @@ cannonical_tags = frozenset([
 	u'musicbrainz_discid',
 	u'musicbrainz_releasegroupid',
 	u'musicbrainz_trackid',
+	u'musicbrainz_releasetrackid',
 	u'musicbrainz_workid',
 	u'replaygain_album_peak',
 	u'replaygain_album_gain',
@@ -154,10 +160,13 @@ id3_read_map = {
 	u'TXXX:VERSION': u'Version',
 	u'TXXX:version': u'Version',
 	u'TXXX:WORK': u'Work',
+	u'TXXX:Work': u'Work',
+	u'TOAL': u'Work',
 	u'TXXX:WRITER': u'Writer',
 	u'TXXX:WRITERSORT': u'WriterSort',
 	u'TXXX:writer': u'Writer',
 	u'TXXX:writersort': u'WriterSort',
+	u'TXXX:Writer': u'Writer',
 	u'TCMP': u'Compilation',
 	u'TIPL': u'Person', # See TIPL map below.
 	u'TXXX:MusicBrainz Album Id': u'musicbrainz_albumid',
@@ -165,13 +174,15 @@ id3_read_map = {
 	u'TXXX:MusicBrainz Artist Id': u'musicbrainz_artistid',
 	u'TXXX:MusicBrainz Disc Id': u'musicbrainz_discid',
 	u'TXXX:MusicBrainz Release Group Id': u'musicbrainz_releasegroupid',
+	u'TXXX:MusicBrainz Release Track Id': u'musicbrainz_releasetrackid',
 	u'UFID:http://musicbrainz.org': u'musicbrainz_trackid',
 	u'TXXX:MusicBrainz Work Id': u'musicbrainz_workid',
 	u'TXXX:MUSICBRAINZ_TRACKID': u'musicbrainz_trackid',
 	u'TXXX:replaygain_album_peak': u'replaygain_album_peak',
 	u'TXXX:replaygain_album_gain': u'replaygain_album_gain',
 	u'TXXX:replaygain_track_peak': u'replaygain_track_peak',
-	u'TXXX:replaygain_track_gain': u'replaygain_track_gain'
+	u'TXXX:replaygain_track_gain': u'replaygain_track_gain',
+	u'TXXX:Acoustid Id': u'acoustid_id'
 	}
 
 """ Map non-ID3 tags from, e.g., Picard to cannonical names. """
@@ -213,6 +224,7 @@ id3_write_map = {
 	u'musicbrainz_albumartistid': u'TXXX:MusicBrainz Album Artist Id',
 	u'musicbrainz_artistid': u'TXXX:MusicBrainz Artist Id',
 	u'musicbrainz_releasegroupid': u'TXXX:MusicBrainz Release Group Id',
+	u'musicbrainz_releasetrackid': u'TXXX:MusicBrainz Release Track Id',
 	u'musicbrainz_trackid': u'UFID:http://musicbrainz.org',
 	u'musicbrainz_workid': u'TXXX: MusicBrainz Work Id',
 	u'replaygain_album_peak': u'TXXX:replaygain_album_peak',
